--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
     background: -webkit-linear-gradient(45deg,#0f0c29,#302b63);
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(45deg, #0f0c29, #302b63);
+    background-repeat: no-repeat;
+    min-height: 100vh;
     color: white !important;
 }
 ul {
